# zbuffer

./: CMakeLists.txt  renderer.cpp  scanline.cpp
lib/: edge.hpp  triangular.hpp  triangular_table.hpp
src/: axes.cpp  ui.cpp
